# eAI

./: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.yaml  conanfile.py  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml  codeql.yml  cross-platform-hal.yml  nightly.yml  qemu-test.yml  release.yml  simulation-test.yml  video-build.yml  weekly.yml
accel/: CMakeLists.txt
accel/include/eai/: accel.h
accel/src/: accel.c  backend_coreml.m  backend_cpu.c  backend_qnn.c  backend_vulkan.c  tensor.c
bci/src/: bci_config.c  decoder_threshold.c  device_simulator.c  output_log.c  signal.c
bindings/cpp/: eai.hpp  eai_bci.hpp
bindings/python/: pyproject.toml
bindings/python/eai/: __init__.py  accel.py  core.py  platform.py
ci/: build-all.sh  build-android.sh  build-arm-cross.sh  build-linux-native.sh  build-macos.sh  build-windows.bat  test-all.sh  test-docker-matrix.sh  test-qemu-arm.sh
ci/docker/: Dockerfile.alpine  Dockerfile.arm64  Dockerfile.asan  Dockerfile.clang
cli/: CMakeLists.txt
cli/src/: main.c
cmake/toolchains/: toolchain-android-ndk.cmake  toolchain-arm-cortex-a-linux.cmake  toolchain-arm-cortex-m0plus.cmake  toolchain-arm-cortex-m33.cmake  toolchain-arm-cortex-m4.cmake  toolchain-arm-cortex-m7.cmake  toolchain-ios.cmake  toolchain-riscv32.cmake
common/: CMakeLists.txt
common/include/eai/: common.h  config.h  eai_api.h  log.h  runtime_contract.h  types.h
common/src/: adaptive.c  config.c  eai_api.c  log.c  runtime_contract.c  tools_builtin.c
docs/: ci-secrets-setup.md  porting-guide.md
docs/book/: book.md  references.bib
docs/site/: index.html
formats/: CMakeLists.txt
formats/include/eai/: gguf.h  onnx.h
formats/src/: format_registry.c  gguf_loader.c  onnx_loader.c
framework/include/eai_fw/: orchestrator.h  policy.h
framework/src/: adaptive.c  connector_can.c
min/src/: agent.c  security_lite.c  update.c
platform/: CMakeLists.txt
platform/include/eai/: hal_accel.h  hal_core.h  hal_fs.h  hal_gpio.h  hal_memory.h  hal_net.h  hal_thread.h  hal_timer.h  platform.h
platform/src/: eai_api_platform.c  platform.c  platform_container.c  platform_eos.c  platform_windows.c
platform/src/hal/android/: core_android.c  memory_android.c
platform/src/hal/baremetal/: core_baremetal.c
platform/src/hal/container/: core_container.c
platform/src/hal/freertos/: core_freertos.c
platform/src/hal/ios/: core_ios.m
platform/src/hal/linux/: core_linux.c  gpio_linux.c  memory_linux.c
platform/src/hal/macos/: core_macos.c  memory_macos.c
platform/src/hal/posix/: fs_posix.c  net_posix.c  thread_posix.c  timer_posix.c
platform/src/hal/windows/: core_windows.c  fs_windows.c  memory_windows.c  net_windows.c  thread_windows.c  timer_windows.c
platform/src/hal/zephyr/: core_zephyr.c
promo/: generate_audio.py  promo_scene.py
tests/: CMakeLists.txt  test_accel.c  test_accel_backend.c  test_adaptive.c  test_api_extended.c  test_common.c  test_eai_api.c  test_formats.c  test_formats_extended.c  test_hal_core.c  test_hal_subsystems.c  test_platform.c  test_platform_hal.c  test_status.c  test_tensor.c
tools/bench/: eai_bench.c
tools/convert/: eai_convert.c
tools/profile/: eai_profile.c
